add new certification image and modify template

--- a/index.html
+++ b/index.html
@@ -331,15 +331,23 @@
               </div>
   
               <div class="certification-box"data-aos="fade-up" data-aos-duration="500">
-                <img src="assets/img/certif_img/Halal.png" alt="Certification 5" class="certification-img">
+                <img src="assets/img/certif_img/SNI.png" alt="Certification 5" class="certification-img">
               </div>
   
               <div class="certification-box"data-aos="fade-up" data-aos-duration="500">
-                <img src="assets/img/certif_img/SNI.png" alt="Certification 6" class="certification-img">
+                <img src="assets/img/certif_img/USDA_ORGANIC.png" alt="Certification 6" class="certification-img">
               </div>
-  
+
               <div class="certification-box"data-aos="fade-up" data-aos-duration="500">
-                <img src="assets/img/certif_img/USDA_ORGANIC.png" alt="Certification 7" class="certification-img">
+                <img src="assets/img/certif_img/halal.png" alt="Certification 6" class="certification-img">
+              </div>
+
+              <div class="certification-box"data-aos="fade-up" data-aos-duration="500">
+                <img src="assets/img/certif_img/natural.png" alt="Certification 8" class="certification-img">
+              </div>
+
+              <div class="certification-box"data-aos="fade-up" data-aos-duration="500">
+                <img src="assets/img/certif_img/vegan.png" alt="Certification 9" class="certification-img">
               </div>
   
             </div>
@@ -395,7 +403,7 @@
                 Our Integrated Organic Project is a sustainable farming initiative that promotes organic farming practices and supports local communities in Indonesia. We work with farmers to develop sustainable agriculture systems that are environmentally friendly and socially responsible. Our goal is to create a better future for farmers and their families by providing them with the tools and resources they need to succeed.
               </p>
 
-              <div class="d-lg-flex justify-content-center align-items-center">
+              <div class="d-flex d-lg-flex justify-content-center align-items-center">
                 <div class="certification-logo-flex d-inline-flex justify-content-between mb-4" data-aos="fade-up" data-aos-duration="400">
 
                   <!-- Certification Logo -->
@@ -412,13 +420,19 @@
                     <img src="assets/img/certif_img/HACCP.png" alt="Certification 4">
                   </div>
                   <div class="certificate-logo d-flex align-items-center justify-content-center">
-                    <img src="assets/img/certif_img/Halal.png" alt="Certification 5">
+                    <img src="assets/img/certif_img/halal.png" alt="Certification 5">
                   </div>
                   <div class="certificate-logo d-flex align-items-center justify-content-center">
                     <img src="assets/img/certif_img/SNI.png" alt="Certification 6">
                   </div>
                   <div class="certificate-logo d-flex align-items-center justify-content-center">
-                    <img src="assets/img/certif_img/USDA_ORGANIC.png" alt="Certification 7">
+                    <img src="assets/img/certif_img/natural.png" alt="Certification 7">
+                  </div>
+                  <div class="certificate-logo d-flex align-items-center justify-content-center">
+                    <img src="assets/img/certif_img/vegan.png" alt="Certification 8">
+                  </div>
+                  <div class="certificate-logo d-flex align-items-center justify-content-center">
+                    <img src="assets/img/certif_img/USDA_ORGANIC.png" alt="Certification 9">
                   </div>
 
                 </div>
