revisi certification index.html & add section welcome about.html

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="assets/img/browserconfig.xml"> -->
 
-    <title>Javari Organic Coconut Sugar</title>
+    <title>About Us | Javari Organic Coconut Sugar</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -214,66 +214,25 @@
     <!-- End Header -->
 
     <!-- Main Content -->
-    <main class="main">
-      <!-- Hero section with Carousel -->
-      <section class="hero-section">
-        <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-
-            <!-- Slide 1 -->
-            <div class="carousel-item active" data-bs-interval="5000">
-              <img src="assets/img/hero1.jpg" alt="Slide 1" class="d-block w-100">
-              <div class="carousel-caption d-md-block">
-                <h5>Organic Coconut Sugar</h5>
-                <p>Pure, natural, and healthy coconut sugar products.</p>
-                <a href="#" class="btn btn-primary">Read More</a>
+    <main class="about">
+      <!-- Welcome Logo Section -->
+      <section id="welcome-section" class="container d-flex align-items-center mb-5">
+        <div class="row w-100">
+            <!-- Left Side: Logo and Welcome Text -->
+            <div class="col-md-6 d-flex flex-column align-items-start justify-content-center">
+                <h2>Welcome to</h2>
+                <img src="assets/img/logoFix.png" alt="Company Logo" class="logo">
+                <h3>Java Agro Mandiri</h3>
+            </div>
+            <!-- Right Side: YouTube Video -->
+            <div class="col-md-6">
+              <div class="video-container">
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/R5p6-13cDQI?si=4yhxNJFbhm96VuWH" title="Youtube Company Profile Javari" frameborder="0" allow="accelerometer; autoplay, clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
-
-            <!-- Slide 2 -->
-            <div class="carousel-item" data-bs-interval="7000">
-              <img src="assets/img/hero2.jpg" alt="Slide 2" class="d-block w-100">
-              <div class="carousel-caption d-md-block">
-                <h5>Organic Coconut Sugar</h5>
-                <p>Pure, natural, and healthy coconut sugar products.</p>
-                <a href="#" class="btn btn-primary">Learn More</a>
-              </div>
-            </div>
-
-            <!-- Slide 3 -->
-            <div class="carousel-item" data-bs-interval="5000">
-              <img src="assets/img/hero3.jpg" alt="Slide 3" class="d-block w-100">
-              <div class="carousel-caption d-md-block">
-                <h5>Organic Coconut Sugar</h5>
-                <p>Pure, natural, and healthy coconut sugar products.</p>
-                <a href="#" class="btn btn-primary">Explore Now</a>
-              </div>
-            </div>
-
-            <!-- Slide 4 -->
-            <div class="carousel-item" data-bs-interval="9000">
-              <img src="assets/img/hero2.jpg" alt="Slide 4" class="d-block w-100">
-              <div class="carousel-caption d-md-block">
-                <h5>Organic Coconut Sugar</h5>
-                <p>Pure, natural, and healthy coconut sugar products.</p>
-                <a href="#" class="btn btn-primary">Discover More</a>
-              </div>
-            </div>
-          </div>
-
-          <!-- Carousel Controls -->
-          <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
-
-      </section>
-      <!-- End Hero Section -->
+    </section>
+      <!-- End welcome Logo Section -->
 
     </main>
     <!-- End Main Content -->
