--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
           <h2 class="section-title mb-4" data-aos="fade-up" data-aos-duration="500">Certifications</h2>
           
           <div class="d-lg-flex justify-content-center align-items-center">
-            <div class="certification-flex d-inline-flex justify-content-between" data-aos="fade-up" data-aos-duration="400">
+            <div class="certification-flex d-flex justify-content-between" data-aos="fade-up" data-aos-duration="400">
   
               <!-- Certification Logo -->
               <div class="certification-box"data-aos="fade-up" data-aos-duration="500">
