update about.html and give style

--- a/about.html
+++ b/about.html
@@ -216,23 +216,48 @@
     <!-- Main Content -->
     <main class="about">
       <!-- Welcome Logo Section -->
-      <section id="welcome-section" class="container d-flex align-items-center mb-5">
-        <div class="row w-100">
-            <!-- Left Side: Logo and Welcome Text -->
-            <div class="col-md-6 d-flex flex-column align-items-start justify-content-center">
-                <h2>Welcome to</h2>
-                <img src="assets/img/logoFix.png" alt="Company Logo" class="logo">
-                <h3>Java Agro Mandiri</h3>
+      <section id="welcome-section" class="welcome-section container d-flex align-items-center mb-5">
+        <div class="d-lg-flex px-5">
+          <!-- Left Side: Logo and Welcome Text -->
+          <div class="col-md-6 d-flex flex-column justify-content-center">
+            <h2 class="section-title">Welcome to</h2>
+            <img src="assets/img/logoFix.png" alt="Company Logo" class="cp-logo img-fluid">
+            <h3 class="section-title text-center">Java Agro Mandiri</h3>
+          </div>
+
+          <!-- Right Side: YouTube Video -->
+          <div class="col-md-6">
+            <div class="video-container">
+              <iframe width="100%" height="315" src="https://www.youtube.com/embed/R5p6-13cDQI?si=4yhxNJFbhm96VuWH" title="Youtube Company Profile Javari" frameborder="0" allow="accelerometer; autoplay, clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <!-- Right Side: YouTube Video -->
-            <div class="col-md-6">
-              <div class="video-container">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/R5p6-13cDQI?si=4yhxNJFbhm96VuWH" title="Youtube Company Profile Javari" frameborder="0" allow="accelerometer; autoplay, clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-            </div>
+          </div>
         </div>
-    </section>
+      </section>
       <!-- End welcome Logo Section -->
+
+      <!-- About Company -->
+      <section id="about-us" class="about-us py-5">
+        <div class="container">
+          <div class="row align-items-start">
+            <!-- Text Title -->
+            <div class="col-lg-12" data-aos="fade-down" data-aos-duration="500">
+              <h2 class="section-title text-center">About Us</h2>
+            </div>
+
+            <!-- About Us Content -->
+            <div class="col-lg-12 text-center">
+              <p data-aos="fade-left" data-aos-duration="1000" class="about-title">
+                CV Java Agro Mandiri (JAVARI) is an Indonesian company that produces organic coconut sugar. We are committed to providing pure, natural, and healthy coconut sugar products. Our products are made from the sap of coconut flowers, which is collected and processed using traditional methods.
+              </p>
+              <p data-aos="fade-left" data-aos-duration="1000" class="about-text">
+                At JAVARI, we believe in the power of nature to provide us with the best ingredients for a healthy and sustainable lifestyle. We are dedicated to promoting organic farming practices and supporting local communities in Indonesia. Our products are certified organic and fair trade, ensuring that they are produced in an environmentally friendly and socially responsible manner. We are committed to providing our customers with the highest quality coconut sugar products that are good for their health and the planet.
+              </p>
+              <a href="#" class="btn btn-contact mt-3">Contact Now</i></a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End About Company -->
 
     </main>
     <!-- End Main Content -->
