--- a/about.html
+++ b/about.html
@@ -216,11 +216,11 @@
     <!-- Main Content -->
     <main class="about">
       <!-- Welcome Logo Section -->
-      <section id="welcome-section" class="welcome-section container d-flex align-items-center mb-5">
-        <div class="d-lg-flex px-5">
+      <section id="welcome-section" class="welcome-section d-flex align-items-center mb-5">
+        <div class="welcome d-md-flex">
           <!-- Left Side: Logo and Welcome Text -->
           <div class="col-md-6 d-flex flex-column justify-content-center">
-            <h2 class="section-title">Welcome to</h2>
+            <h2 class="section-title text-start">Welcome to</h2>
             <img src="assets/img/logoFix.png" alt="Company Logo" class="cp-logo img-fluid">
             <h3 class="section-title text-center">Java Agro Mandiri</h3>
           </div>
@@ -238,7 +238,7 @@
       <!-- About Company -->
       <section id="about-us" class="about-us py-5">
         <div class="container">
-          <div class="row align-items-start">
+          <div class="align-items-start">
             <!-- Text Title -->
             <div class="col-lg-12" data-aos="fade-down" data-aos-duration="500">
               <h2 class="section-title text-center">About Us</h2>
