--- a/index.html
+++ b/index.html
@@ -73,11 +73,13 @@
                 <li><a class="dropdown-item" href="#">Organic Coconut Sugar</a></li>
 
                 <li class="dropdown-submenu">
-                  <a class="dropdown-item dropdown-toggle" href="#">Natural Coconut Sugar Spices</a>
+                  <a class="dropdown-item dropdown-toggle" href="#">Natural Coconut Sugar MIX Flavors</a>
                   <ul class="dropdown-menu">
-                    <li><a href="#" class="dropdown-item">Ginger Coconut Sugar</a></li>
+                    <li><a href="#" class="dropdown-item">Mixed Spices Coconut Sugar</a></li>
                     <li><a href="#" class="dropdown-item">Curcuma Coconut Sugar</a></li>
                     <li><a href="#" class="dropdown-item">Cinnamon Coconut Sugar</a></li>
+                    <li><a href="#" class="dropdown-item">Lemongrass Coconut Sugar</a></li>
+                    <li><a href="#" class="dropdown-item">Ginger Coconut Sugar</a></li>
                     <li><a href="#" class="dropdown-item">Turmeric Coconut Sugar</a></li>
                   </ul>
                 </li>
@@ -88,7 +90,7 @@
                   <a class="dropdown-item dropdown-toggle" href="#" id="offcanvasProductDropdownItems" role="button">Natural Derrivatives</a>
                   <ul class="dropdown-menu" aria-labelledby="offcanvasProductDropdownItems">
                     <li><a href="#" class="dropdown-item">Coconut Flakes</a></li>
-                    <li><a href="#" class="dropdown-item">Derricated Coconut</a></li>
+                    <li><a href="#" class="dropdown-item">Dessicated Coconut</a></li>
                   </ul>
                 </li>
                 <li class="dropdown-submenu">
@@ -99,7 +101,7 @@
                   </ul>
                 </li>
 
-                <li><a class="dropdown-item" href="#">Natural Coco Pit</a></li>
+                <li><a class="dropdown-item" href="#">Natural Coco Peat</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -167,14 +169,16 @@
                 <li><a class="dropdown-item nav-link" href="#">Organic Coconut Sugar</a></li>
 
                 <li><a class="dropdown-item nav-link" href="#">Natural Arenga Sugar</a></li>
-                <li><a class="dropdown-item nav-link" href="#">Natural Coco Pit</a></li>
+                <li><a class="dropdown-item nav-link" href="#">Natural Coco Peat</a></li>
 
                 <li class="dropdown-submenu">
-                  <a class="dropdown-item nav-link dropdown-toggle" href="#">Natural Coconut Sugar Spices</a>
+                  <a class="dropdown-item nav-link dropdown-toggle" href="#">Natural Coconut Sugar Mix Flavors</a>
                   <ul class="dropdown-menu ps-4">
-                    <li><a href="#" class="dropdown-item nav-link">Ginger Coconut Sugar</a></li>
+                    <li><a href="#" class="dropdown-item nav-link">Mixed Spices Coconut Sugar</a></li>
                     <li><a href="#" class="dropdown-item nav-link">Curcuma Coconut Sugar</a></li>
                     <li><a href="#" class="dropdown-item nav-link">Cinnamon Coconut Sugar</a></li>
+                    <li><a href="#" class="dropdown-item nav-link">Lemongrass Coconut Sugar</a></li>
+                    <li><a href="#" class="dropdown-item nav-link">Ginger Coconut Sugar</a></li>
                     <li><a href="#" class="dropdown-item nav-link">Turmeric Coconut Sugar</a></li>
                   </ul>
                 </li>
@@ -183,7 +187,7 @@
                   <a class="dropdown-item nav-link dropdown-toggle" href="#">Natural Derrivatives</a>
                   <ul class="dropdown-menu ps-4">
                     <li><a href="#" class="dropdown-item nav-link">Coconut Flakes</a></li>
-                    <li><a href="#" class="dropdown-item nav-link">Derricated Coconut</a></li>
+                    <li><a href="#" class="dropdown-item nav-link">Dessicated Coconut</a></li>
                   </ul>
                 </li>
 
