add product page, revise navbar, and add underConstruction views

--- a/pages/cocoSugarMix/cinnamon.html
+++ b/pages/cocoSugarMix/cinnamon.html
@@ -116,7 +116,7 @@
         <!-- Contact Us Button and Social Media Icons -->
         <div class="d-flex justify-content-center align-items-center">
           <div class="contact d-lg-flex justify-content-center">
-            <a href="../../contact.html" class="btn btn-success w-100 me-3">Contact Us</a>
+            <a href="../../contact.html" class="btn btn-success w-100 me-3">ContactUs</a>
           </div>
 
           <div id="social-icons" class="d-flex justify-content-center align-items-center m-2">
@@ -166,36 +166,36 @@
                 Product
               </a>
               <ul class="dropdown-menu" aria-labelledby="offcanvasProductDropdown">
-                <li><a class="dropdown-item nav-link" href="#">Organic Coconut Sugar</a></li>
+                <li><a class="dropdown-item nav-link" href="../singglePages/organicCoco.html">Organic Coconut Sugar</a></li>
 
-                <li><a class="dropdown-item nav-link" href="#">Natural Arenga Sugar</a></li>
-                <li><a class="dropdown-item nav-link" href="#">Natural Coco Peat</a></li>
+                <li><a class="dropdown-item nav-link" href="../singglePages/arenga.html">Natural Arenga Sugar</a></li>
+                <li><a class="dropdown-item nav-link" href="../singglePages/cocoPeat.html">Natural Coco Peat</a></li>
 
                 <li class="dropdown-submenu">
                   <a class="dropdown-item nav-link dropdown-toggle" href="#">Natural Coconut Sugar Mix Flavors</a>
                   <ul class="dropdown-menu ps-4">
-                    <li><a href="#" class="dropdown-item nav-link">Mixed Spices Coconut Sugar</a></li>
-                    <li><a href="#" class="dropdown-item nav-link">Curcuma Coconut Sugar</a></li>
-                    <li><a href="#" class="dropdown-item nav-link">Cinnamon Coconut Sugar</a></li>
-                    <li><a href="#" class="dropdown-item nav-link">Lemongrass Coconut Sugar</a></li>
-                    <li><a href="#" class="dropdown-item nav-link">Ginger Coconut Sugar</a></li>
-                    <li><a href="#" class="dropdown-item nav-link">Turmeric Coconut Sugar</a></li>
+                    <li><a href="mixSpices.html" class="dropdown-item nav-link">Mixed Spices Coconut Sugar</a></li>
+                    <li><a href="curcuma.html" class="dropdown-item nav-link">Curcuma Coconut Sugar</a></li>
+                    <li><a href="cinnamon.html" class="dropdown-item nav-link">Cinnamon Coconut Sugar</a></li>
+                    <li><a href="lemongrass.html" class="dropdown-item nav-link">Lemongrass Coconut Sugar</a></li>
+                    <li><a href="ginger.html" class="dropdown-item nav-link">Ginger Coconut Sugar</a></li>
+                    <li><a href="turmeric.html" class="dropdown-item nav-link">Turmeric Coconut Sugar</a></li>
                   </ul>
                 </li>
 
                 <li class="dropdown-submenu">
                   <a class="dropdown-item nav-link dropdown-toggle" href="#">Natural Derrivatives</a>
                   <ul class="dropdown-menu ps-4">
-                    <li><a href="#" class="dropdown-item nav-link">Coconut Flakes</a></li>
-                    <li><a href="#" class="dropdown-item nav-link">Dessicated Coconut</a></li>
+                    <li><a href="../derrivatives/cocoFlakes.html" class="dropdown-item nav-link">Coconut Flakes</a></li>
+                    <li><a href="../derrivatives/dessicated.html" class="dropdown-item nav-link">Dessicated Coconut</a></li>
                   </ul>
                 </li>
 
                 <li class="dropdown-submenu">
                   <a class="dropdown-item nav-link dropdown-toggle" href="#">Natural Charcoal</a>
                   <ul class="dropdown-menu ps-4">
-                    <li><a href="#" class="dropdown-item nav-link">Coco Charcoal</a></li>
-                    <li><a href="#" class="dropdown-item nav-link">Wood Charcoal</a></li>
+                    <li><a href="../charcoal/coco.html" class="dropdown-item nav-link">Coco Charcoal</a></li>
+                    <li><a href="../charcoal/wood.html" class="dropdown-item nav-link">Wood Charcoal</a></li>
                   </ul>
                 </li>
 
