--- a/pages/singglePages/arenga.html
+++ b/pages/singglePages/arenga.html
@@ -218,12 +218,71 @@
 
     <!-- Main Content -->
     <main class="main mt-5">
-      <section class="under-construction d-flex justify-content-center align-items-center">
-        <div class="text-center">
-          <img src="../../assets/img/underConstruction.png" alt="Under Construction" class="img-fluid mb-4">
-          <h1 class="display-4">This Page is Under Construction</h1>
-          <p class="lead">We are working hard to bring you the best experience. Please check back later.</p>
+      <!-- Section 1: Header Image with Title and Description -->
+      <section id="header-image" class="d-flex flex-column justify-content-center align-items-center">
+        <div class="card background-image"><img src="../../assets/img/products/arenga.jpg" alt="Natural Arenga Sugar"></div>
+        <div class="card-img-overlay">
+          <div class="container">
+            <h1 class="product-header-title" data-aos="fade-up" data-aos-duration="1000"><strong class="text-strong">Arenga</strong> Sugar</h1>
+            <p class="product-description" data-aos="fade-up" data-aos-duration="1500">
+              like coconut sugar but made with love from arenga sap
+            </p>
+
+          </div>
         </div>
+
+      </section>
+
+      <!-- Section 2: Product Description with Image -->
+      <section id="product-detail" class="product-detail d-flex align-items-center">
+        <div class="container">
+          <div class="row p-md-4 p-lg-5 align-items-start justify-content-center">
+              <!-- Left Side: Product Description -->
+              <div class="col-lg-6 img-box">
+                <img src="../../assets/img/products/arenga.jpg" alt="Natural Arenga Sugar" class="product-img">
+              </div>
+              <!-- Right Side: Product Image -->
+              <div class="col-lg-6 py-3">
+                  <h2 class="product-title">Natural Arenga Sugar</h2>
+                  <p class="product-text">
+                    Arenga sugar or arenga palm sugar is a mineral rich natural sweetener comes from Aren/Enau palm tree sap (Arenga Pinata Merr) and be processed naturally until it becomes granulated sugar with a fragrant caramel taste and aroma. It contains antioxidants, amino acids, vitamins and benefits from a low glycemic index, making it be a smart alternative to cane sugar.
+                  </p>
+              </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Section 3: Product Features and Details -->
+      <section id="product-features" class="container-fluid">
+
+        <!-- Subsection 1: Benefit -->
+        <div class="container">
+          <div class="row p-md-4 p-lg-5 fetures-section">
+            <h2 class="features-title" data-aos="fade-up">Key Features</h2>
+            <div class="col-md-4 feature-item" data-aos="fade-up">
+              <div class="feature-icon">
+                <i class="bi bi-droplet-half"></i>
+              </div>
+              <h3>Reduced Fat Content</h3>
+              <p>LFDC contains around 10-15% fat compared to regular desiccated coconut, which can have up to 60% fat.</p>
+            </div>
+            <div class="col-md-4 feature-item" data-aos="fade-up">
+              <div class="feature-icon">
+                <i class="bi bi-heart-pulse"></i>
+              </div>
+              <h3>Nutrient Retention</h3>
+              <p>Despite the lower fat content, LFDC retains many of the nutrients found in coconut, including dietary fiber, vitamins, and minerals.</p>
+            </div>
+            <div class="col-md-4 feature-item" data-aos="fade-up">
+              <div class="feature-icon">
+                <i class="bi bi-emoji-smile"></i>
+              </div>
+              <h3>Delicious Flavor</h3>
+              <p>It still has the rich, nutty flavor of coconut, although it may be slightly less creamy due to the reduced fat..</p>
+            </div>
+          </div>
+        </div>
+        
       </section>
 
     </main>
