add arenga product page

--- a/pages/singglePages/arenga.html
+++ b/pages/singglePages/arenga.html
@@ -257,29 +257,51 @@
 
         <!-- Subsection 1: Benefit -->
         <div class="container">
-          <div class="row p-md-4 p-lg-5 fetures-section">
-            <h2 class="features-title" data-aos="fade-up">Key Features</h2>
-            <div class="col-md-4 feature-item" data-aos="fade-up">
-              <div class="feature-icon">
-                <i class="bi bi-droplet-half"></i>
+          <div class="row p-md-4 p-lg-5 fetures-section justify-content-center">
+            <h2 class="features-title text-center" data-aos="fade-up">Benefit</h2>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi-lightning-fill"></i>
               </div>
-              <h3>Reduced Fat Content</h3>
-              <p>LFDC contains around 10-15% fat compared to regular desiccated coconut, which can have up to 60% fat.</p>
+              <h3 class="features-benefit-title">Helps boost immunity and energy</h3>
             </div>
-            <div class="col-md-4 feature-item" data-aos="fade-up">
-              <div class="feature-icon">
-                <i class="bi bi-heart-pulse"></i>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi-droplet-fill"></i>
               </div>
-              <h3>Nutrient Retention</h3>
-              <p>Despite the lower fat content, LFDC retains many of the nutrients found in coconut, including dietary fiber, vitamins, and minerals.</p>
+              <h3 class="features-benefit-title">Maintaining cholesterol stability in the body</h3>
             </div>
-            <div class="col-md-4 feature-item" data-aos="fade-up">
-              <div class="feature-icon">
-                <i class="bi bi-emoji-smile"></i>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi-droplet-half"></i>
               </div>
-              <h3>Delicious Flavor</h3>
-              <p>It still has the rich, nutty flavor of coconut, although it may be slightly less creamy due to the reduced fat..</p>
+              <h3 class="features-benefit-title">Sweeteners that are easily absorbed by the body into energy</h3>
             </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi-bandaid"></i>
+              </div>
+              <h3 class="features-benefit-title">Helps boost immunity and energy</h3>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi-heart-fill"></i>
+              </div>
+              <h3 class="features-benefit-title">Maintaining cholesterol stability in the body</h3>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi-speedometer"></i>
+              </div>
+              <h3 class="features-benefit-title">Sweeteners that are easily absorbed by the body into energy</h3>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi-journal-medical"></i>
+              </div>
+              <h3 class="features-benefit-title">Sweeteners that are easily absorbed by the body into energy</h3>
+            </div>
+
           </div>
         </div>
         
