add asset img and CocoPeat Page

--- a/pages/singglePages/cocoPeat.html
+++ b/pages/singglePages/cocoPeat.html
@@ -218,12 +218,168 @@
 
     <!-- Main Content -->
     <main class="main mt-5">
-      <section class="under-construction d-flex justify-content-center align-items-center">
-        <div class="text-center">
-          <img src="../../assets/img/underConstruction.png" alt="Under Construction" class="img-fluid mb-4">
-          <h1 class="display-4">This Page is Under Construction</h1>
-          <p class="lead">We are working hard to bring you the best experience. Please check back later.</p>
+
+      <!-- Section 1: Header Image with Title and Description -->
+      <section id="header-image" class="d-flex flex-column justify-content-center align-items-center">
+        <div class="card background-image"><img src="../../assets/img/products/peat.jpg" alt="Coconut Peat"></div>
+        <div class="card-img-overlay">
+          <div class="container">
+            <h1 class="product-header-title" data-aos="fade-up" data-aos-duration="1000">Coconut <strong class="text-strong">Peat</strong></h1>
+            <p class="product-description" data-aos="fade-up" data-aos-duration="1500">
+              Coconut peat is a natural and organic soil conditioner that comes from the husk of coconut fruit.
+            </p>
+
+          </div>
         </div>
+
+      </section>
+
+      <!-- Section 2: Product Description with Image -->
+      <section id="product-detail" class="product-detail d-flex align-items-center">
+        <div class="container">
+          <div class="row p-md-4 p-lg-5 align-items-start justify-content-center">
+              <!-- Product Image -->
+              <div class="col-lg-12 img-box-2">
+                <img src="../../assets/img/products/peat.jpg" alt="Coconut Peat" class="product-img-2">
+              </div>
+              <!-- Product Description -->
+              <div class="col-lg-12 py-3">
+                  <h2 class="product-title text-center">Coconut Peat</h2>
+                  <p class="product-text text-center">
+                    Coco peat, also known as coir pith or coconut coir, is a natural fiber extracted from the husk of coconuts. Coco peat is a versatile and effective medium for gardening, whether in pots, hydroponics, or outdoor beds.
+                  </p>
+                  <p class="product-text text-center">
+                    It’s a popular growing medium in gardening and horticulture for several reasons:
+                  </p>
+              </div>
+
+              <div class="col-lg-6 img-box">
+                <img src="../../assets/img/products/peat2.jpg" alt="Coconut Peat" class="product-img">
+              </div>
+
+              <div class="col-lg-6 py-3">
+                <div class="container hc">
+                  <ol class="hc-list">
+                    <li>Water Retention
+                      <p class="hc-description">Coco peat can hold a significant amount of water, making it great for maintaining moisture in plants while preventing over-saturation.</p>
+                    </li>
+                    <li>Aeration
+                      <p class="hc-description">Its structure promotes good air circulation around plant roots, helping to prevent root rot and allowing for healthy growth.</p>
+                    </li>
+                    <li>pH Neutral
+                      <p class="hc-description">Coco peat has a neutral pH level, making it suitable for a wide range of plants.</p>
+                    </li>
+                    <li>Sustainable
+                      <p class="hc-description">It's an eco-friendly alternative to peat moss, as it's a byproduct of coconut processing, making it renewable and biodegradable.</p>
+                    </li>
+                    <li>Nutrient Retention
+                      <p class="hc-description">Coco peat can retain nutrients well, providing a beneficial environment for plants.</p>
+                    </li>
+                  </ol>
+                </div>
+              </div>
+
+          </div>
+        </div>
+      </section>
+
+      <!-- Section 3: Product Features and Details -->
+      <section id="product-features" class="container-fluid">
+
+        <!-- Subsection 1: Benefit -->
+        <div class="container">
+          <div class="row p-md-4 p-lg-5 fetures-section justify-content-center">
+            <h2 class="features-title text-center" data-aos="fade-up">Benefit</h2>
+
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-box"></i>
+              </div>
+              <h3 class="features-benefit-title">Lightweight</h3>
+              <p>Coco peat is much lighter than traditional soil, making it easier to handle and transport.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-layers"></i>
+              </div>
+              <h3 class="features-benefit-title">Reduce Soil Erosion</h3>
+              <p>It helps prevent soil erosion due to its ability to retain moisture and hold soil in place.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-diagram-3"></i>
+              </div>
+              <h3 class="features-benefit-title">Mycorrhizal Fungi Support</h3>
+              <p>Coco peat encourages beneficial fungi, which can enhance plant nutrient uptake.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-shield"></i>
+              </div>
+              <h3 class="features-benefit-title">Pest Resistance</h3>
+              <p>It is less prone to pests and diseases compared to soil, reducing the need for chemical treatments.</p>
+            </div>
+
+          </div>
+        </div>
+
+        <!-- Subsection 2: Uses -->
+        <div class="container">
+          <div class="row p-md-4 p-lg-5 cp-uses-section">
+            <h2 class="features-title text-center mb-4" data-aos="fade-up">Coco Peat Uses</h2>
+            <div class="col-md-6 use-item" data-aos="fade-up">
+              <img src="../../assets/img/products/peat2.jpg" alt="Baking Icons" class="use-img">
+              <h3>Seed Starting</h3>
+              <p>Ideal for starting seeds, as it provides a sterile environment and retains moisture well.</p>
+            </div>
+            <div class="col-md-6 use-item" data-aos="fade-up">
+              <img src="../../assets/img/products/peat2.jpg" alt="Smoothies Icons" class="use-img">
+              <h3>Potting Mix</h3>
+              <p>Commonly blended with other materials like perlite or vermiculite for a well-balanced potting mix.</p>
+            </div>
+            <div class="col-md-6 use-item" data-aos="fade-up">
+              <img src="../../assets/img/products/peat2.jpg" alt="Savory Dishes Icons" class="use-img">
+              <h3>Hydroponics</h3>
+              <p>Used as a growing medium in hydroponic systems due to its excellent water retention and aeration properties.</p>
+            </div>
+            <div class="col-md-6 use-item" data-aos="fade-up">
+              <img src="../../assets/img/products/peat2.jpg" alt="Cereal Icons" class="use-img">
+              <h3>Mulching</h3>
+              <p>Can be used as a mulch to suppress weeds and retain moisture in garden beds.</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Subsection 3: Considerations -->
+        <div class="container">
+          <div class="row p-md-4 p-lg-5 fetures-section justify-content-center">
+            <h2 class="features-title text-center" data-aos="fade-up">Considerations</h2>
+
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-water"></i>
+              </div>
+              <h3 class="features-benefit-title">Salt Content</h3>
+              <p>Some coco peat may contain salts from the processing, so it’s best to rinse it before use.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-geo-alt"></i>
+              </div>
+              <h3 class="features-benefit-title">Compaction</h3>
+              <p>Over time, coco peat can compact, so mixing it with other materials can help maintain aeration.</p>
+            </div>
+            <div class="col-md-3 feature-item" data-aos="fade-up">
+              <div class="features-benefit-icon">
+                <i class="bi bi-globe2"></i>
+              </div>
+              <h3 class="features-benefit-title">Environmental Impact</h3>
+              <p>While coco peat is more sustainable than peat moss, it's essential to source it responsibly to ensure sustainable harvesting practices.</p>
+            </div>
+
+          </div>
+        </div>
+
       </section>
 
     </main>
